--- a/src/rt/rustrt.def.in
+++ b/src/rt/rustrt.def.in
@@ -47,7 +47,7 @@ rust_file_is_dir
 rust_get_stdin
 rust_get_stdout
 rust_get_stderr
-rust_istr_push
+rust_str_push
 rust_list_files
 rust_process_wait
 rust_ptr_eq
