--- a/src/rt/rustrt.def.in
+++ b/src/rt/rustrt.def.in
@@ -78,5 +78,6 @@ upcall_vec_grow
 upcall_vec_push
 upcall_log_type
 upcall_malloc
+upcall_rust_personality
 upcall_shared_malloc
 upcall_shared_free
