--- a/src/libcore/core.rc
+++ b/src/libcore/core.rc
@@ -7,7 +7,7 @@
 #[license = "BSD"];
 #[crate_type = "lib"];
 
-export box, char, float, f32, f64, int, str, ptr;
+export box, char, float, bessel, f32, f64, int, str, ptr;
 export uint, u8, u32, u64, vec, bool;
 export either, option, result;
 export ctypes, sys, unsafe, comm, task;
@@ -18,6 +18,7 @@ export extfmt;
 mod box;
 mod char;
 mod float;
+mod bessel;
 mod f32;
 mod f64;
 mod int;
