--- a/src/libcore/core.rc
+++ b/src/libcore/core.rc
@@ -32,7 +32,7 @@ export int, i8, i16, i32, i64;
 export uint, u8, u16, u32, u64;
 export float, f32, f64;
 export box, char, ptr, vec, bool;
-export str_bytes, str_chars, str_words, str_lines, str;
+export str, str_chars, str_bytes;
 export either, option, result, iter;
 export ctypes, sys, unsafe, comm, task, logging;
 export extfmt;
@@ -50,8 +50,8 @@ mod f64;
 mod int;
 mod str_bytes;
 mod str_chars;
-mod str_words;
-mod str_lines;
+//mod str_words;
+//mod str_lines;
 mod i8;
 mod i16;
 mod i32;
