move str iterators to submodules

--- a/src/libcore/core.rc
+++ b/src/libcore/core.rc
@@ -31,8 +31,7 @@ This behavior can be disabled with the `no_core` crate attribute."
 export int, i8, i16, i32, i64;
 export uint, u8, u16, u32, u64;
 export float, f32, f64;
-export box, char, ptr, vec, bool;
-export str, str_chars, str_bytes;
+export box, char, str, ptr, vec, bool;
 export either, option, result, iter;
 export ctypes, sys, unsafe, comm, task, logging;
 export extfmt;
@@ -48,10 +47,6 @@ mod bessel;
 mod f32;
 mod f64;
 mod int;
-mod str_bytes;
-mod str_chars;
-//mod str_words;
-//mod str_lines;
 mod i8;
 mod i16;
 mod i32;
