mk: Fix the regexp of SHOW_DOCS
The tag marks were missing, and `make tips` didn't work.

--- a/Makefile.in
+++ b/Makefile.in
@@ -103,7 +103,7 @@
 #
 # </tips>
 #
-# <nittygritty>
+# <nitty-gritty>
 #
 # # The Rust Build System
 #
@@ -157,7 +157,7 @@
 #
 # Admittedly this is a little convoluted.
 #
-# </nittygritty>
+# </nitty-gritty>
 #
 
 ######################################################################
