--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,8 @@
 name = "rust-clippy"
 version = "0.0.1"
 authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
+
+[lib]
+name = "rust_clippy"
+crate_type = ["dylib"]
+
