Block format control flow discriminant expressions and binops
Fixes #1450

Adds control_style option

--- a/rfc-rustfmt.toml
+++ b/rfc-rustfmt.toml
@@ -1,5 +1,6 @@
 fn_args_layout = "Block"
 array_layout = "Block"
+control_style = "Rfc"
 where_style = "Rfc"
 generics_indent = "Block"
 fn_call_style = "Block"
