appveyor: Wrap handle.exe download in a retry
Should help deal with spurious download failures.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -141,7 +141,7 @@ install:
   - set PATH="C:\Program Files (x86)\Inno Setup 5";%PATH%
 
   # Help debug some handle issues on AppVeyor
-  - ps: Invoke-WebRequest -Uri https://download.sysinternals.com/files/Handle.zip -OutFile handle.zip
+  - appveyor-retry appveyor DownloadFile https://download.sysinternals.com/files/Handle.zip
   - mkdir handle
   - ps: Expand-Archive handle.zip -dest handle
   - set PATH=%PATH%;%CD%\handle
