Add all targets

--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,7 @@
 #!/usr/bin/make -f
 
 BUILD_DIR=build/dist
+RUST_VER=1.19.0-dev
 
 %:
 	dh $@
@@ -12,9 +13,29 @@ override_dh_auto_configure:
 	fi
 
 override_dh_auto_clean:
-	$(RM) -rfv rustc-1.19.0-dev-x86_64-unknown-linux-gnu
-	$(RM) -rfv rust-std-1.19.0-dev-x86_64-unknown-linux-gnu
+	$(RM) -rfv debian/test
+	$(RM) -rfv rustc-${RUST_VER}-x86_64-unknown-linux-gnu
+	$(RM) -rfv rust-std-${RUST_VER}-x86_64-unknown-linux-gnu
+	$(RM) -rfv rust-std-${RUST_VER}-i686-unknown-linux-gnu
+	$(RM) -rfv rust-std-${RUST_VER}-i686-pc-windows-gnu
+	$(RM) -rfv rust-std-${RUST_VER}-i686-apple-darwin-gnu
+	$(RM) -rfv rust-std-${RUST_VER}-x86_64-pc-windows-gnu
+	$(RM) -rfv rust-std-${RUST_VER}-x86_64-apple-darwin-gnu
 
 override_dh_auto_build:
-	tar -xvf ${BUILD_DIR}/rustc-1.19.0-dev-x86_64-unknown-linux-gnu.tar.xz
-	tar -xvf ${BUILD_DIR}/rust-std-1.19.0-dev-x86_64-unknown-linux-gnu.tar.xz
+	tar -xvf ${BUILD_DIR}/rustc-${RUST_VER}-x86_64-unknown-linux-gnu.tar.xz
+	tar -xvf ${BUILD_DIR}/rust-std-${RUST_VER}-x86_64-unknown-linux-gnu.tar.xz
+	tar -xvf ${BUILD_DIR}/rust-std-${RUST_VER}-i686-unknown-linux-gnu.tar.xz
+	tar -xvf ${BUILD_DIR}/rust-std-${RUST_VER}-i686-pc-windows-gnu.tar.xz
+	tar -xvf ${BUILD_DIR}/rust-std-${RUST_VER}-i686-apple-darwin.tar.xz
+	tar -xvf ${BUILD_DIR}/rust-std-${RUST_VER}-x86_64-pc-windows-gnu.tar.xz
+	tar -xvf ${BUILD_DIR}/rust-std-${RUST_VER}-x86_64-apple-darwin.tar.xz
+
+override_dh_auto_test:
+	debian/rustc/usr/bin/rustc --crate-type lib debian/test.rs -o debian/test
+	debian/rustc/usr/bin/rustc --crate-type lib debian/test.rs -o debian/test --target=i686-unknown-linux-gnu
+	debian/rustc/usr/bin/rustc --crate-type lib debian/test.rs -o debian/test --target=i686-pc-windows-gnu
+	debian/rustc/usr/bin/rustc --crate-type lib debian/test.rs -o debian/test --target=i686-apple-darwin
+	debian/rustc/usr/bin/rustc --crate-type lib debian/test.rs -o debian/test --target=x86_64-unknown-linux-gnu
+	debian/rustc/usr/bin/rustc --crate-type lib debian/test.rs -o debian/test --target=x86_64-pc-windows-gnu
+	debian/rustc/usr/bin/rustc --crate-type lib debian/test.rs -o debian/test --target=x86_64-apple-darwin
