--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,29 @@ before_script:
 - rustup target add i686-unknown-linux-gnu
 - rustup target add i686-pc-windows-gnu
 - rustup target add i686-pc-windows-msvc
+- rustup component add rust-src
+- chmod +x -R ~/.rustup/toolchains/*/lib/rustlib/src/rust/src/jemalloc/include/jemalloc/
+- cargo install xargo
+- export RUST_SYSROOT=$HOME/rust
 script:
 - |
-  export RUST_SYSROOT=$HOME/rust &&
+  # Test plain miri
   cargo build &&
   cargo test &&
-  cargo install &&
+  cargo install
+- |
+  # Test cargo miri
   cd cargo-miri-test &&
   cargo miri &&
   cargo miri test &&
   cd ..
+- |
+  # get ourselves a MIR-ful libstd
+  cd xargo &&
+  RUSTFLAGS='-Zalways-encode-mir' xargo build &&
+  cd .. &&
+  # and run the tests with it
+  MIRI_SYSROOT=~/.xargo/HOST cargo test
 notifications:
   email:
     on_success: never
