--- a/debian/config-win32.toml
+++ b/debian/config-win32.toml
@@ -1,3 +1,3 @@
 [build]
-build = "x86_64-pc-windows-gnu"
-target = ["x86_64-pc-windows-gnu"]
+build = "i686-pc-windows-gnu"
+target = ["i686-pc-windows-gnu"]
