First batch of one quickcheck test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,8 @@ path = "src/bin/rust_semverver.rs"
 cargo = "^0.18.0"
 crates-io = "^0.7.0"
 
+[dev-dependencies]
+quickcheck = "^0.4.1"
+
 [replace]
 "libgit2-sys:0.6.11" = { git = "https://github.com/ibabushkin/git2-rs.git", branch = "tmp-fix-libressl"}
