Add config option for experimental LLVM targets
NVPTX and Hexagon LLVM targets are no longer built by default. Instead,
the developer has to opt in to building them by listing them in the new
experimental-targets option.

--- a/src/bootstrap/config.toml.example
+++ b/src/bootstrap/config.toml.example
@@ -51,7 +51,12 @@
 # support. You'll need to write a target specification at least, and most
 # likely, teach rustc about the C ABI of the target. Get in touch with the
 # Rust team and file an issue if you need assistance in porting!
-#targets = "X86;ARM;AArch64;Mips;PowerPC;SystemZ;JSBackend;MSP430;Sparc;NVPTX;Hexagon"
+#targets = "X86;ARM;AArch64;Mips;PowerPC;SystemZ;JSBackend;MSP430;Sparc"
+
+# Experimental LLVM targets to build supoort for. These are specified in the
+# same format as the normal targets, but are different in that they need be
+# opted into. The available targets are NVPTX and Hexagon.
+#experimental-targets = ""
 
 # Cap the number of parallel linker invocations when compiling LLVM.
 # This can be useful when building LLVM with debug info, which significantly
