--- a/src/ci/docker/disabled/dist-i686-android/Dockerfile
+++ b/src/ci/docker/disabled/dist-i686-android/Dockerfile
@@ -1,24 +1,4 @@
-FROM ubuntu:16.04
-
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-  ca-certificates \
-  cmake \
-  curl \
-  file \
-  g++ \
-  git \
-  libssl-dev \
-  make \
-  pkg-config \
-  python2.7 \
-  sudo \
-  unzip \
-  xz-utils
-
-# dumb-init
-COPY scripts/dumb-init.sh /scripts/
-RUN sh /scripts/dumb-init.sh
+FROM rust-ci-base
 
 # ndk
 COPY scripts/android-ndk.sh /scripts/
@@ -59,10 +39,6 @@ ENV SCRIPT \
     rm /android/ndk/x86 && \
     ln -s /android/ndk/x86-9 /android/ndk/x86 && \
     python2.7 ../x.py dist --host $HOSTS --target $HOSTS)
-
-# sccache
-COPY scripts/sccache.sh /scripts/
-RUN sh /scripts/sccache.sh
 
 # init
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
