--- a/src/bootstrap/config.toml.example
+++ b/src/bootstrap/config.toml.example
@@ -143,11 +143,17 @@
 # option to true.
 #full-bootstrap = false
 
-# Enable a build of the and extended rust tool set which is not only the
-# compiler but also tools such as Cargo. This will also produce "combined
-# installers" which are used to install Rust and Cargo together. This is
+# Enable a build of the extended rust tool set which is not only the
+# compiler but also tools such as Cargo or RLS. This will also produce "combined
+# installers" which are used to install Rust, Cargo and RLS together. This is
 # disabled by default.
 #extended = false
+
+# Build all the tools as part of the "build" phase instead of lazily
+# waiting for those to be needed. This will cause tools such as rust-installer
+# and rustbook to be built early on instead of during installation or
+# documentation generation. This is disabled by default.
+#build-all-tools = false
 
 # Verbosity level: 0 == not verbose, 1 == verbose, 2 == very verbose
 #verbose = 0
