--- a/debian/config-win64.toml
+++ b/debian/config-win64.toml
@@ -1,3 +1,3 @@
 [build]
 build = "x86_64-pc-windows-gnu"
-target = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-gnu"]
+target = ["x86_64-pc-windows-gnu"]
