--- a/src/tools/build-manifest/Cargo.toml
+++ b/src/tools/build-manifest/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
 
 [dependencies]
-toml = "0.4"
-serde = "1.0"
-serde_derive = "1.0"
+toml = "0.1"
+rustc-serialize = "0.3"
