--- a/bench/Makefile
+++ b/bench/Makefile
@@ -3,7 +3,7 @@
 .PHONY : clean
 
 %-unopt.ll: %.c
-	../build/bin/clang -fno-unroll-loops $^ -O3 -fno-vectorize -fno-slp-vectorize -S -emit-llvm -o $@ -ffast-math -g -ggdb
+	../build/bin/clang -fno-unroll-loops $^ -O3 -fno-vectorize -fno-slp-vectorize -S -emit-llvm -o $@ -ffast-math #-g -ggdb
 
 %-unopt.ll: %.cpp
 	../build/bin/clang++ -fno-exceptions -fno-unroll-loops $^ -O3 -fno-vectorize -fno-slp-vectorize -S -emit-llvm -o $@ -ffast-math
