try github paths

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,10 +17,10 @@ jobs:
     - name: install llvm ${{ matrix.llvm }}
       run: sudo apt-get install -y --no-install-recommends build-essential ${{ matrix.llvm }} cmake
     - name: mkdir
-      run: cd enzyme && mkdir build && cd build
+      run: cd enzyme && mkdir build
     - name: cmake
-      run: cmake ..
+      run: cd enzyme/build && cmake ..
     - name: make
-      run: make
+      run: cd enzyme/build && make
     - name: make check-enzyme
-      run: make check-enzyme
+      run: cd enzyme/build && make check-enzyme
