Add verbose debugging

--- a/enzyme/test/CMakeLists.txt
+++ b/enzyme/test/CMakeLists.txt
@@ -14,6 +14,7 @@ list(APPEND ${CMAKE_CURRENT_BINARY_DIR}/lit.cfg)
 add_lit_testsuite(check-enzyme "Running enzyme regression tests"
     ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS ${ENZYME_TEST_DEPS}
+    ARGS -v
 )
 
 set_target_properties(check-enzyme PROPERTIES FOLDER "Tests")
